support github source

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@mosch/gatsby-source-github": "^0.4.1",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
     "gatsby": "^2.0.0",
