--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-autolink-headers": "^2.3.15",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-source-github": "0.0.2",
     "gatsby-source-google-docs": "^2.0.0-beta.13",
